syntax = "proto3";

package auth;
option go_package="github.com/abednarchuk/grpc_auth/auth_backend/authpb";

message User {
  string id = 1;
  string user_name = 2;
  string email = 3;
  string password = 4;
}
message Token {
  string plain_text = 1;
  string user_id = 2;
  bytes hash = 3;
  int64 expiry = 4; //unix time
  string scope = 5;
}

message SignupRequest {
  User user = 1;
}

message SignupResponse {
  User user = 1;
  Token token = 2;
}

message UsernameAvailabilityRequest {
  string username = 1;
}
message EmailAvailabilityRequest {
  string email = 1;
}
message AvailabilityResponse {
  bool available = 1;
}
service SignupService{
  rpc SignUp(SignupRequest) returns (SignupResponse){};
  rpc IsUsernameAvailable(UsernameAvailabilityRequest) returns (AvailabilityResponse){};
  rpc IsEmailAvailable(EmailAvailabilityRequest) returns (AvailabilityResponse){};
}